airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T130646.724541+0000/task_id=run_pipeline_2/attempt=1.log
[2026-06-03T13:06:48.947+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:06:48.985+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.998+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.999+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T13:06:49.023+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_2> on 2026-06-03 13:06:46.724541+00:00
[2026-06-03T13:06:49.033+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_2', 'manual__2026-06-03T13:06:46.724541+00:00', '--job-id', '149', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpprpqiew6']
[2026-06-03T13:06:49.034+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2365) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:06:49.036+0000] {standard_task_runner.py:91} INFO - Job 149: Subtask run_pipeline_2
[2026-06-03T13:06:49.040+0000] {standard_task_runner.py:63} INFO - Started process 2371 to run task
[2026-06-03T13:06:49.095+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T13:06:46.724541+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:06:49.199+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_2' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T13:06:46.724541+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T13:06:46.724541+00:00'
[2026-06-03T13:06:49.200+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:06:49.220+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:06:49.222+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 2']
[2026-06-03T13:06:49.235+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:06:59.089+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.090+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.090+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:06:59.091+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.091+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:06:59.092+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:06:59.092+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:06:59.093+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:06:59.093+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:06:59.094+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.094+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.094+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:06:59.095+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.095+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_local_pipeline (db_to_storage)
[2026-06-03T13:06:59.096+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.096+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.097+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:06:59.097+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.098+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:06:59.098+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:06:59.099+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:06:59.099+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T13:06:59.100+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:06:59.101+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:06:59.101+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.102+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:06:59.104+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T13:06:59.105+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:06:59.105+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 61, in main
[2026-06-03T13:06:59.106+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:06:59.106+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:06:59.107+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:06:59.107+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:06:59.108+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:06:59.108+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:06:59.109+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.109+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.110+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:06:59.110+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.111+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:06:59.111+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 94, in <module>
[2026-06-03T13:06:59.112+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:06:59.113+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 79, in main
[2026-06-03T13:06:59.114+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:06:59.114+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:06:59.115+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:06:59.116+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:06:59.117+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:06:59.117+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:06:59.118+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:06:59.266+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:06:59.267+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:06:59.275+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:06:59.279+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_2, run_id=manual__2026-06-03T13:06:46.724541+00:00, execution_date=20260603T130646, start_date=20260603T130648, end_date=20260603T130659
[2026-06-03T13:06:59.291+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 149 for task run_pipeline_2 (Bash command failed. The command returned a non-zero exit code 1.; 2371)
[2026-06-03T13:06:59.309+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:06:59.321+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:06:59.323+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
